syntax = "proto3";

package nibiru.perp.v1;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "cosmos_proto/cosmos.proto";

option go_package="github.com/NibiruChain/nibiru/x/perp/types";

message Params {
  // stopped identifies if the perp exchange is stopped or not
  bool stopped = 1;

  string maintenance_margin_ratio = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
    ];

  // FeePoolFeeRatio is the ratio transferred to the the fee pool
  string fee_pool_fee_ratio = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];

  // EcosystemFundFeeRatio is the ratio transferred to the PerpEF.
  string ecosystem_fund_fee_ratio = 4 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];

  // LiquidationFeeRatio is the percentage of liquidated position that will be given
  // to out as a reward. Half of the liquidation fee is given to the liquidator,
  // and the other half is given to the ecosystem fund.
  string liquidation_fee_ratio = 5 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];

  // PartialLiquidationRatio is the share we try to liquidate if the margin is higher than liquidation fee
  string partial_liquidation_ratio = 6 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];

  // specifies the interval on which the fundingPayment is being updated
  string epoch_identifier = 7;
}

// GenesisState defines the perp  module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  repeated cosmos.base.v1beta1.Coin vault_balance = 2 [
    (gogoproto.moretags) = "yaml:\"module_account_balance\"",
    (gogoproto.nullable) = false
  ];
  repeated cosmos.base.v1beta1.Coin perp_ef_balance = 3 [
    (gogoproto.moretags) = "yaml:\"module_account_balance\"",
    (gogoproto.nullable) = false
  ];
  repeated cosmos.base.v1beta1.Coin fee_pool_balance = 4 [
    (gogoproto.moretags) = "yaml:\"module_account_balance\"",
    (gogoproto.nullable) = false
  ];
  repeated PairMetadata pair_metadata = 5;
  repeated Position positions = 6;
  repeated PrepaidBadDebt prepaid_bad_debts = 7;
  repeated string whitelisted_addresses = 8;
}

// Position identifies and records information on a user's position on one of
// the virtual liquidity pools.
message Position {
  // address identifies the address owner of this position
  string trader_address = 1;

  // pair identifies the pair associated with this position
  string pair = 2;

  // Position size.
  string size = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false]; // signed int
  
  // Amount of margin remaining in the position.
  string margin = 4 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false]; 

  // OpenNotional is the quote denom value of the position when opening.
  // Used to calculate PnL.
  string open_notional = 5 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false]; 

  // The last cumulative funding payment this position has applied.
  // Used to calculate the next funding payment. 
  string last_update_cumulative_premium_fraction = 6 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false]; // int

  // BlockNumber is the block number of the change to the position.
  int64 block_number = 7;
}

message PositionResp {
    Position position = 1;

    // The amount of quote assets exchanged.
    string exchanged_notional_value = 2 [
      (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
      (gogoproto.nullable) = false];

    // The amount of base assets exchanged. 
    string exchanged_position_size = 3 [
      (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
      (gogoproto.nullable) = false];

    // The amount of bad debt accrued during this position change.
    // Measured in absolute value of quote units.
    // If greater than zero, then the position change event will likely fail.
    string bad_debt = 4 [
      (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
      (gogoproto.nullable) = false];

    // The funding payment applied on this position change.
    string funding_payment = 5 [
      (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
      (gogoproto.nullable) = false];

    // The amount of PnL realized on this position changed, measured in quote units.
    string realized_pnl = 6 [
      (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
      (gogoproto.nullable) = false];

    // The unrealized PnL in the position after the position change.
    string unrealized_pnl_after = 7 [
      (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
      (gogoproto.nullable) = false];

    // The amount of margin the trader has to give to the vault.
    // A negative value means the vault pays the trader.
    string margin_to_vault = 8 [
      (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
      (gogoproto.nullable) = false];

    // The position's notional value after the position change, measured in quote units.
    string position_notional = 9 [
      (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
      (gogoproto.nullable) = false];
}

message LiquidateResp {
  // Amount of bad debt created by the liquidation event
  string bad_debt = 1 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false];

  // Fee paid to the liquidator
  string fee_to_liquidator = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false];

  // Fee paid to the Perp EF fund
  string fee_to_perp_ecosystem_fund = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false];

  // Address of the liquidator
  string liquidator = 4;

  // Position response from the close or open reverse position
  PositionResp position_resp = 5;
}

enum Side {
  SIDE_UNSPECIFIED = 0;
  BUY = 1;
  SELL = 2;
}

enum PnLCalcOption {
  PNL_CALC_OPTION_UNSPECIFIED = 0;
  SPOT_PRICE = 1;
  TWAP = 2;
  ORACLE = 3;
}

enum PnLPreferenceOption {
  PNL_PREFERENCE_UNSPECIFIED = 0;
  MAX = 1;
  MIN = 2;
}

enum MarginCalculationPriceOption {
  MARGIN_CALCULATION_PRICE_OPTION_UNSPECIFIED = 0;
  SPOT = 1;
  INDEX = 2;
  MAX_PNL = 3;
}

message PairMetadata {
  string pair = 1;
  repeated string cumulative_premium_fractions = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false];
}

message PrepaidBadDebt {
  string denom = 1;
  string amount = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false];
}
